Fixed z-index for menu.

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -13,6 +13,7 @@ body, html{
 	top: 0;
 	background: #222;
 	height: 50px;
+	z-index: 1000;
 }
 
 #menu a{
